[gd_scene load_steps=14 format=3 uid="uid://de7qapkqfycxl"]

[ext_resource type="Texture2D" uid="uid://cs8h2qyuakmko" path="res://level/obstacle.png" id="2"]
[ext_resource type="Script" path="res://level/tile_map.gd" id="2_q8fhk"]
[ext_resource type="PackedScene" uid="uid://bylnvndipic1k" path="res://player/player.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://b6u8it5cvj24j" path="res://enemy/enemy.tscn" id="4_0uwim"]
[ext_resource type="Script" path="res://enemy/enemy.gd" id="5_grc23"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_on5ov"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vnjib"]
texture = ExtResource("2")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_xqlka"]
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_on5ov")
sources/0 = SubResource("TileSetAtlasSource_vnjib")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2gec"]
size = Vector2(112, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhulq"]
size = Vector2(465, 433)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vdblm"]
size = Vector2(469, 448)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_00784"]
vertices = PackedVector2Array(435, -187, 482, -187, 479, -28, 270, -123, 270, -168, 292, -829, 294, -762, 283, -784, 283, -820, 398, 147, 398, 106, 481, 38, 481, 439, 260, 39, 295, 105, 166, 257, 157, 284, 55, 412, 50, 37, 166, 219, 268, 257, 268, 219, 291, 145, 352, 343, 239, -829, 247, -820, 237, -763, 247, -784, 412, -703, 412, -741, 485, -747, 485, -534, 467, -534, 330, -764, 134, -741, 141, -87, 176, -124, 260, -27, 224, -27, 140, -46, 481, -263, 483, -233, 435, -233, 230, -428, 51, -27, 50, -46, 484, -494, 484, -486, 229, -487, 469, -496, 134, -703, 220, -488, 47, -488, 48, -759, 180, -169, 50, -87, 49, -425, 221, -428, 479, -426, 401, 438, 356, 438, 224, 37)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(5, 6, 7, 8), PackedInt32Array(9, 10, 11, 12), PackedInt32Array(13, 11, 10, 14), PackedInt32Array(15, 16, 17, 18, 19), PackedInt32Array(20, 21, 22, 9, 12, 23), PackedInt32Array(24, 5, 8, 25), PackedInt32Array(26, 24, 25, 27), PackedInt32Array(28, 29, 30, 31, 32), PackedInt32Array(33, 30, 29, 34, 6), PackedInt32Array(35, 36, 3, 2, 37, 38, 39), PackedInt32Array(40, 41, 42, 43), PackedInt32Array(44, 45, 39, 38), PackedInt32Array(46, 47, 48, 49), PackedInt32Array(50, 28, 32, 49, 48, 51), PackedInt32Array(51, 52, 53, 50), PackedInt32Array(54, 35, 55, 56, 57, 43), PackedInt32Array(43, 58, 40), PackedInt32Array(59, 60, 23), PackedInt32Array(43, 42, 0, 4, 54), PackedInt32Array(14, 22, 21, 19, 18, 61, 13), PackedInt32Array(26, 27, 7, 6), PackedInt32Array(26, 6, 34, 53), PackedInt32Array(53, 34, 50), PackedInt32Array(57, 51, 48, 43), PackedInt32Array(35, 54, 36), PackedInt32Array(38, 37, 13, 61), PackedInt32Array(12, 59, 23), PackedInt32Array(20, 23, 16, 15)])
outlines = Array[PackedVector2Array]([PackedVector2Array(342, 351, 347, 449, 401, 448, 492, 450, 491, 28, 270, 29, 270, -17, 489, -19, 492, -197, 445, -197, 445, -223, 493, -223, 491, -263, 489, -436, 240, -438, 239, -477, 495, -476, 494, -504, 479, -505, 477.936, -523.85, 495, -524, 495, -557, 495, -757, 331, -775, 304, -773, 302, -839, 229, -839, 227, -773, 39, -769, 37, -479, 210, -478, 211, -438, 39, -435, 41, -17, 214, -17, 214, 27, 40, 28, 46, 441, 161, 296), PackedVector2Array(144, -731, 402, -731, 402, -713, 144, -713), PackedVector2Array(189, -159, 260, -158, 260, -133, 187, -134), PackedVector2Array(48, -78, 131, -77, 130, -56, 46, -57), PackedVector2Array(304, 115, 388, 116, 388, 137, 302, 135), PackedVector2Array(176, 229, 258, 229, 258, 247, 176, 247), PackedVector2Array(257, -810, 273, -810, 273, -794, 257, -794)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7jnq"]
size = Vector2(16, 15)

[node name="World" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource("TileSet_xqlka")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1114112, 0, 0, 1179648, 0, 0, 1245184, 0, 0, 1310720, 0, 0, 1376256, 0, 0, 1441792, 0, 0, 1507328, 0, 0, 1572864, 0, 0, 1638400, 0, 0, 1703936, 0, 0, 1769472, 0, 0, 1835008, 0, 0, 1900544, 0, 0, 1966080, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 983041, 0, 0, 1048577, 0, 0, 1114113, 0, 0, 1179649, 0, 0, 1245185, 0, 0, 1310721, 0, 0, 1376257, 0, 0, 1441793, 0, 0, 1507329, 0, 0, 1572865, 0, 0, 1638401, 0, 0, 1703937, 0, 0, 1769473, 0, 0, 1835009, 0, 0, 1900545, 0, 0, 1966081, 0, 0, 2, 0, 0, 65538, 0, 0, 1900546, 0, 0, 1966082, 0, 0, 3, 0, 0, 65539, 0, 0, 1900547, 0, 0, 1966083, 0, 0, 4, 0, 0, 65540, 0, 0, 1900548, 0, 0, 1966084, 0, 0, 5, 0, 0, 65541, 0, 0, 1900549, 0, 0, 1966085, 0, 0, 6, 0, 0, 65542, 0, 0, 1900550, 0, 0, 1966086, 0, 0, 7, 0, 0, 65543, 0, 0, 1900551, 0, 0, 1966087, 0, 0, 8, 0, 0, 65544, 0, 0, 1900552, 0, 0, 1966088, 0, 0, 9, 0, 0, 65545, 0, 0, 1900553, 0, 0, 1966089, 0, 0, 10, 0, 0, 65546, 0, 0, 1900554, 0, 0, 1966090, 0, 0, 11, 0, 0, 65547, 0, 0, 1900555, 0, 0, 1966091, 0, 0, 12, 0, 0, 65548, 0, 0, 1900556, 0, 0, 1966092, 0, 0, 1900557, 0, 0, 1966093, 0, 0, 1900558, 0, 0, 1966094, 0, 0, 1900559, 0, 0, 1966095, 0, 0, 1900560, 0, 0, 1966096, 0, 0, 17, 0, 0, 65553, 0, 0, 1900561, 0, 0, 1966097, 0, 0, 18, 0, 0, 65554, 0, 0, 1900562, 0, 0, 1966098, 0, 0, 19, 0, 0, 65555, 0, 0, 1900563, 0, 0, 1966099, 0, 0, 20, 0, 0, 65556, 0, 0, 1900564, 0, 0, 1966100, 0, 0, 21, 0, 0, 65557, 0, 0, 1900565, 0, 0, 1966101, 0, 0, 22, 0, 0, 65558, 0, 0, 1900566, 0, 0, 1966102, 0, 0, 23, 0, 0, 65559, 0, 0, 1900567, 0, 0, 1966103, 0, 0, 24, 0, 0, 65560, 0, 0, 1900568, 0, 0, 1966104, 0, 0, 25, 0, 0, 65561, 0, 0, 1900569, 0, 0, 1966105, 0, 0, 26, 0, 0, 65562, 0, 0, 1900570, 0, 0, 1966106, 0, 0, 27, 0, 0, 65563, 0, 0, 1900571, 0, 0, 1966107, 0, 0, 28, 0, 0, 65564, 0, 0, 1900572, 0, 0, 1966108, 0, 0, 29, 0, 0, 65565, 0, 0, 1900573, 0, 0, 1966109, 0, 0, 30, 0, 0, 65566, 0, 0, 1900574, 0, 0, 1966110, 0, 0, 31, 0, 0, 65567, 0, 0, 131103, 0, 0, 196639, 0, 0, 262175, 0, 0, 327711, 0, 0, 393247, 0, 0, 458783, 0, 0, 524319, 0, 0, 589855, 0, 0, 655391, 0, 0, 720927, 0, 0, 786463, 0, 0, 851999, 0, 0, 917535, 0, 0, 983071, 0, 0, 1048607, 0, 0, 1114143, 0, 0, 1179679, 0, 0, 1245215, 0, 0, 1310751, 0, 0, 1376287, 0, 0, 1441823, 0, 0, 1507359, 0, 0, 1572895, 0, 0, 1638431, 0, 0, 1703967, 0, 0, 1769503, 0, 0, 1835039, 0, 0, 1900575, 0, 0, 1966111, 0, 0, 32, 0, 0, 65568, 0, 0, 131104, 0, 0, 196640, 0, 0, 262176, 0, 0, 327712, 0, 0, 393248, 0, 0, 458784, 0, 0, 524320, 0, 0, 589856, 0, 0, 655392, 0, 0, 720928, 0, 0, 786464, 0, 0, 852000, 0, 0, 917536, 0, 0, 983072, 0, 0, 1048608, 0, 0, 1114144, 0, 0, 1179680, 0, 0, 1245216, 0, 0, 1310752, 0, 0, 1376288, 0, 0, 1441824, 0, 0, 1507360, 0, 0, 1572896, 0, 0, 1638432, 0, 0, 1703968, 0, 0, 1769504, 0, 0, 1835040, 0, 0, 1900576, 0, 0, 1966112, 0, 0, 1572878, 0, 0, 1572879, 0, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1507348, 0, 0, 1441812, 0, 0, 1441811, 0, 0, 1441810, 0, 0, 1441809, 0, 0, 1441808, 0, 0, 1441807, 0, 0, 1441806, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1638414, 0, 0, 1638415, 0, 0, 1638416, 0, 0, 1638417, 0, 0, 1638418, 0, 0, 1638419, 0, 0, 1638420, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524311, 0, 0, 524310, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -65536, 0, 0, -131072, 0, 0, -196608, 0, 0, -262144, 0, 0, -327680, 0, 0, -393216, 0, 0, -458752, 0, 0, -524288, 0, 0, -589824, 0, 0, -655360, 0, 0, -720896, 0, 0, -65504, 0, 0, -131040, 0, 0, -196576, 0, 0, -262112, 0, 0, -327648, 0, 0, -393184, 0, 0, -458720, 0, 0, -524256, 0, 0, -589792, 0, 0, -655328, 0, 0, -720864, 0, 0, -786400, 0, 0, -786432, 0, 0, -851968, 0, 0, -917504, 0, 0, -983040, 0, 0, -1048576, 0, 0, -1114112, 0, 0, -1114081, 0, 0, -1114080, 0, 0, -1048544, 0, 0, -983008, 0, 0, -917472, 0, 0, -851936, 0, 0, -589812, 0, 0, -589811, 0, 0, -589810, 0, 0, -589809, 0, 0, -1048545, 0, 0, -983009, 0, 0, -917473, 0, 0, -851937, 0, 0, -786401, 0, 0, -720865, 0, 0, -655329, 0, 0, -65505, 0, 0, -131041, 0, 0, -196577, 0, 0, -262113, 0, 0, -327649, 0, 0, -393185, 0, 0, -458721, 0, 0, -524257, 0, 0, -589793, 0, 0, -983039, 0, 0, -589823, 0, 0, -524287, 0, 0, -458751, 0, 0, -393215, 0, 0, -327679, 0, 0, -262143, 0, 0, -196607, 0, 0, -131071, 0, 0, -65535, 0, 0, -655359, 0, 0, -720895, 0, 0, -786431, 0, 0, -851967, 0, 0, -917503, 0, 0, -1048575, 0, 0, -1114111, 0, 0, -1179647, 0, 0, -1245183, 0, 0, -1310719, 0, 0, -1376255, 0, 0, -1441791, 0, 0, -1507327, 0, 0, -1572863, 0, 0, -1638399, 0, 0, -1703935, 0, 0, -1703936, 0, 0, -1638400, 0, 0, -1572864, 0, 0, -1507328, 0, 0, -1441792, 0, 0, -1376256, 0, 0, -1310720, 0, 0, -1245184, 0, 0, -1179648, 0, 0, -1769471, 0, 0, -1769472, 0, 0, -1835008, 0, 0, -1900544, 0, 0, -1900543, 0, 0, -1835007, 0, 0, -1835006, 0, 0, -1835005, 0, 0, -1835004, 0, 0, -1835003, 0, 0, -1835002, 0, 0, -1835001, 0, 0, -1835000, 0, 0, -1834999, 0, 0, -1834998, 0, 0, -1834997, 0, 0, -1834996, 0, 0, -1834993, 0, 0, -1834992, 0, 0, -1834991, 0, 0, -1834990, 0, 0, -1834989, 0, 0, -1834988, 0, 0, -1834987, 0, 0, -1834986, 0, 0, -1834985, 0, 0, -1834984, 0, 0, -1834983, 0, 0, -1834982, 0, 0, -1834981, 0, 0, -1834980, 0, 0, -1834979, 0, 0, -1834978, 0, 0, -1834977, 0, 0, -1834976, 0, 0, -1900542, 0, 0, -1900541, 0, 0, -1900540, 0, 0, -1900539, 0, 0, -1900538, 0, 0, -1900537, 0, 0, -1900536, 0, 0, -1900535, 0, 0, -1900534, 0, 0, -1900533, 0, 0, -1900532, 0, 0, -1900529, 0, 0, -1900528, 0, 0, -1900517, 0, 0, -1900516, 0, 0, -1900515, 0, 0, -1900514, 0, 0, -1900513, 0, 0, -1900512, 0, 0, -1900518, 0, 0, -1900519, 0, 0, -1900520, 0, 0, -1900521, 0, 0, -1900522, 0, 0, -1900523, 0, 0, -1900524, 0, 0, -1900525, 0, 0, -1900526, 0, 0, -1900527, 0, 0, -851938, 0, 0, -851939, 0, 0, -851940, 0, 0, -1769440, 0, 0, -1703904, 0, 0, -1638368, 0, 0, -1572832, 0, 0, -1507296, 0, 0, -1441760, 0, 0, -1376224, 0, 0, -1310688, 0, 0, -1245152, 0, 0, -1179616, 0, 0, -1179617, 0, 0, -1245153, 0, 0, -1310689, 0, 0, -1376225, 0, 0, -1441761, 0, 0, -1507297, 0, 0, -1572833, 0, 0, -1638369, 0, 0, -1703905, 0, 0, -1769441, 0, 0, -1966079, 0, 0, -2031615, 0, 0, -2097151, 0, 0, -2162687, 0, 0, -2228224, 0, 0, -2293760, 0, 0, -2359296, 0, 0, -2424832, 0, 0, -2490368, 0, 0, -2490367, 0, 0, -2555903, 0, 0, -2621439, 0, 0, -2686975, 0, 0, -2752511, 0, 0, -2818047, 0, 0, -2424831, 0, 0, -2359295, 0, 0, -2293759, 0, 0, -2228223, 0, 0, -1966080, 0, 0, -2031616, 0, 0, -2097152, 0, 0, -2162688, 0, 0, -2555904, 0, 0, -2621440, 0, 0, -2686976, 0, 0, -2752512, 0, 0, -2818048, 0, 0, -2883584, 0, 0, -2949120, 0, 0, -3014656, 0, 0, -3080192, 0, 0, -3145727, 0, 0, -3211263, 0, 0, -3080191, 0, 0, -3014655, 0, 0, -2949119, 0, 0, -2883583, 0, 0, -3145728, 0, 0, -3211264, 0, 0, -3276800, 0, 0, -3342336, 0, 0, -3342335, 0, 0, -3407871, 0, 0, -3473407, 0, 0, -3538943, 0, 0, -3276799, 0, 0, -3407872, 0, 0, -3473408, 0, 0, -3538944, 0, 0, -1966049, 0, 0, -2031585, 0, 0, -2097121, 0, 0, -2162657, 0, 0, -2228193, 0, 0, -2293729, 0, 0, -2359265, 0, 0, -2424801, 0, 0, -2490337, 0, 0, -2555873, 0, 0, -2621409, 0, 0, -2686945, 0, 0, -2752481, 0, 0, -2818017, 0, 0, -2883553, 0, 0, -2949089, 0, 0, -3014625, 0, 0, -3080161, 0, 0, -3145697, 0, 0, -3211233, 0, 0, -3276769, 0, 0, -3342305, 0, 0, -3407841, 0, 0, -3473377, 0, 0, -3538913, 0, 0, -3538912, 0, 0, -3473376, 0, 0, -3407840, 0, 0, -3342304, 0, 0, -3276768, 0, 0, -3211232, 0, 0, -3145696, 0, 0, -3080160, 0, 0, -3014624, 0, 0, -2949088, 0, 0, -2883552, 0, 0, -2818016, 0, 0, -2752480, 0, 0, -2686944, 0, 0, -2621408, 0, 0, -2555872, 0, 0, -2490336, 0, 0, -2424800, 0, 0, -2359264, 0, 0, -2293728, 0, 0, -2228192, 0, 0, -2162656, 0, 0, -2097120, 0, 0, -2031584, 0, 0, -1966048, 0, 0, -3801086, 0, 0, -3801087, 0, 0, -3735551, 0, 0, -3670015, 0, 0, -3604479, 0, 0, -3604480, 0, 0, -3670016, 0, 0, -3735552, 0, 0, -3801088, 0, 0, -3866624, 0, 0, -3866623, 0, 0, -3866622, 0, 0, -3866621, 0, 0, -3866620, 0, 0, -3866619, 0, 0, -3866618, 0, 0, -3866617, 0, 0, -3866616, 0, 0, -3866615, 0, 0, -3866614, 0, 0, -3866613, 0, 0, -3866612, 0, 0, -3866611, 0, 0, -3866610, 0, 0, -3866609, 0, 0, -3866608, 0, 0, -3866607, 0, 0, -3866606, 0, 0, -3866605, 0, 0, -3866604, 0, 0, -3866603, 0, 0, -3866602, 0, 0, -3866601, 0, 0, -3866600, 0, 0, -3866599, 0, 0, -3866598, 0, 0, -3866597, 0, 0, -3866596, 0, 0, -3866595, 0, 0, -3866594, 0, 0, -3866593, 0, 0, -3801057, 0, 0, -3801056, 0, 0, -3735520, 0, 0, -3669984, 0, 0, -3604448, 0, 0, -3604449, 0, 0, -3669985, 0, 0, -3735521, 0, 0, -3866592, 0, 0, -3801058, 0, 0, -3801059, 0, 0, -3801060, 0, 0, -3801061, 0, 0, -3801085, 0, 0, -3801084, 0, 0, -3801083, 0, 0, -3801082, 0, 0, -3801081, 0, 0, -3801080, 0, 0, -3801079, 0, 0, -3801078, 0, 0, -3801077, 0, 0, -3801076, 0, 0, -3801075, 0, 0, -3801074, 0, 0, -3801073, 0, 0, -3801072, 0, 0, -3801071, 0, 0, -3801070, 0, 0, -3801069, 0, 0, -3801068, 0, 0, -3801067, 0, 0, -3801066, 0, 0, -3801065, 0, 0, -3801064, 0, 0, -3801063, 0, 0, -3801062, 0, 0, -2949111, 0, 0, -2949110, 0, 0, -2949109, 0, 0, -2949108, 0, 0, -2949107, 0, 0, -2949106, 0, 0, -2949105, 0, 0, -2949104, 0, 0, -2949103, 0, 0, -2949102, 0, 0, -2949101, 0, 0, -2949100, 0, 0, -2949099, 0, 0, -2949098, 0, 0, -2949097, 0, 0, -2949096, 0, 0, -3211251, 0, 0, -3276787, 0, 0, -3342323, 0, 0, -3407859, 0, 0, -3473395, 0, 0, -3473394, 0, 0, -3473393, 0, 0, -3473392, 0, 0, -3473391, 0, 0, -3473390, 0, 0, -3473389, 0, 0, -3407853, 0, 0, -3211245, 0, 0, -3276781, 0, 0, -3342317, 0, 0, -2097122, 0, 0, -3276784, 0, 0)
layer_1/name = "Secret"
layer_1/tile_data = PackedInt32Array(1703950, 0, 0, 1769486, 0, 0, 1835022, 0, 0, 1703951, 0, 0, 1769487, 0, 0, 1835023, 0, 0, 1703952, 0, 0, 1769488, 0, 0, 1835024, 0, 0, 1703953, 0, 0, 1769489, 0, 0, 1835025, 0, 0, 1703954, 0, 0, 1769490, 0, 0, 1835026, 0, 0, 1703955, 0, 0, 1769491, 0, 0, 1835027, 0, 0, 1703956, 0, 0, 1769492, 0, 0, 1835028, 0, 0)
script = ExtResource("2_q8fhk")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(267, 245)

[node name="Player" parent="." instance=ExtResource("3")]
position = Vector2(112, 456)

[node name="SecretDetector" type="Area2D" parent="."]
position = Vector2(280, 440)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecretDetector"]
shape = SubResource("RectangleShape2D_a2gec")

[node name="Level2Area" type="Area2D" parent="."]
position = Vector2(33, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Area"]
position = Vector2(232, -210.5)
shape = SubResource("RectangleShape2D_rhulq")

[node name="Level1Area" type="Area2D" parent="."]
position = Vector2(33, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level1Area"]
position = Vector2(231, 253)
shape = SubResource("RectangleShape2D_rhulq")

[node name="Level3Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level3Area"]
position = Vector2(262, -697)
shape = SubResource("RectangleShape2D_vdblm")

[node name="Enemy" parent="." instance=ExtResource("4_0uwim")]
position = Vector2(391, 457)
script = ExtResource("5_grc23")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
position = Vector2(-1, 10)
navigation_polygon = SubResource("NavigationPolygon_00784")

[node name="GoalPlace" type="Area2D" parent="."]
position = Vector2(264, -808)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalPlace"]
position = Vector2(264, -807.5)
shape = SubResource("RectangleShape2D_t7jnq")

[connection signal="body_entered" from="SecretDetector" to="TileMap" method="_on_secret_detector_body_entered"]
[connection signal="body_exited" from="SecretDetector" to="TileMap" method="_on_secret_detector_body_exited"]
[connection signal="body_entered" from="Level2Area" to="TileMap" method="_on_next_level_reached"]
[connection signal="body_exited" from="Level2Area" to="TileMap" method="_on_next_level_lost"]
[connection signal="body_entered" from="Level1Area" to="TileMap" method="_on_next_level_reached"]
[connection signal="body_exited" from="Level1Area" to="TileMap" method="_on_next_level_lost"]
[connection signal="body_entered" from="Level3Area" to="TileMap" method="_on_next_level_reached"]
[connection signal="body_exited" from="Level3Area" to="TileMap" method="_on_next_level_lost"]
